Improve style html

--- a/page.html
+++ b/page.html
@@ -7,32 +7,30 @@
 </head>
 <body>
 
-    <h2 style="text-align: center; background-color:hsl(210, 3%, 64%); font-family:verdana;"> HOJA DE VIDA</h2>
+    <h1 style="text-align:right; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 500%;">Juan Sebastián <br> Taborda Alzate</h1>
+    <img src="c:\Users\Usuario\Downloads\WhatsApp Image 2024-11-11 at 11.16.41 AM.jpeg" style = " width:350px; height:350px; text-align: left;"> 
     
-    <div style="text-align: center;">
-        <img src="c:\DATA\Downloads\Mi foto.jpeg" style = "text-align: center; width:400px;height:300px; ">
-    </div>
-
-    <h2 style = "text-align: center; background-color: hsl(210, 3%, 64%); font-family: Verdana, Geneva, Tahoma, sans-serif;">JUAN SEBASTIÁN TABORDA ALZATE<br>C.C 1.025.645.579</h2>
+ 
+    <h2 style = "text-align: center; background-color: hsl(210, 3%, 64%); font-family: Verdana, Geneva, Tahoma, sans-serif;">Dat</h2>
     <br>
     <h2 style="text-align: center; background-color: hsl(210, 3%, 64%); font-family: Verdana, Geneva, Tahoma, sans-serif;">DATOS PERSONALES</h2>
     <br>
 
     <table>
         <tr>
-            <td><b>FECHA NACIMIENTO:  </b></td> <td> 5/10/2005</td>
+            <td><b>Fecha de nacimiento:  </b></td> <td>5 de Octubre del 2005</td>
         </tr>
         <tr>
-            <td><b>ESTADO CIVÍL: </b></td> <td> SOLTERO</td> 
+            <td><b>Estado civíl: </b></td> <td> SOLTERO</td> 
         </tr>
         <tr>
-            <td><b>DIRECCIÓN: </b></td> <td>CARRERA 58 #77 - 41</td>
+            <td><b>Dirección: </b></td> <td>CARRERA 58 #77 - 41</td>
         </tr>
         <tr>
-            <td><b>TELÉFONO: </b></td> <td>322 61 20 937</td>
+            <td><b>Teléfono: </b></td> <td>322 61 20 937</td>
         </tr>
         <tr>
-            <td><b>EMAIL: </b></td> <td style = "color: blue;">juansebastiantabordaalzate30@gmail.com</td>
+            <td><b>Email: </b></td> <td style = "color: blue;">juansebastiantabordaalzate30@gmail.com</td>
         </tr>
     </table>
     <br>
