--- a/page.html
+++ b/page.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de vida</title>
 </head>
-<body>
+
+<body style="background-color: hsl(35, 67%, 87%);">
+    
 
     <h1 style="text-align:right; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 500%;">Juan Sebastián <br> Taborda Alzate</h1>
     <img src="c:\Users\Usuario\Downloads\WhatsApp Image 2024-11-11 at 11.16.41 AM.jpeg" style = " width:350px; height:350px; text-align: left;"> 
